--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "express": "^4.17.3",
         "joi": "^17.6.0",
+        "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.15",
         "sequelize": "^6.19.0",
