--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "joi": "^17.6.0",
         "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.0",
+        "multer": "^2.0.2",
         "nodemon": "^2.0.15",
         "sequelize": "^6.19.0",
         "sqlite3": "^5.0.6"
